--- a/app/index.html
+++ b/app/index.html
@@ -1,36 +1,60 @@
 <html lang="en" ng-app="angulardemo" ng-controller="mainController as vm">
-    <head>
-      <meta charset="utf-8">
-      <title>{{vm.title}}</title>
-      <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
-      <link rel="stylesheet" href="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css" />
-      <link rel="stylesheet" href="./css/custome.css" />
-      <script src="./js/jquery/jquery.min.js"></script>
-      <script src="../node_modules/angular/angular.js"></script>
-      <script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-      <script src="./js/angular/angular-route.min.js"></script>
-      <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
-      <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-      <script src="./app.config.js"></script>
-      <script src="./app.js"></script>
-    </head>
-    <body>
-      <div class="container-fluid" style="margin:0;padding:0">
-        <div ui-view="main"></div>
-      </div>
-    <!-- controllers -->
-     <script src="templates/home/home.controller.js"></script>
-     <script src="templates/profile/profile.controller.js"></script>
-     <script src="templates/login/login.controller.js"></script>
-     <script src="templates/register/register.controller.js"></script>
-     <!-- services -->
-     <script src="services/data.service.js"></script>
-     <script src="services/authentication.service.js"></script>
 
-     <!-- filters -->
-     <script src="filters/capitalize.filter.js"></script>
+<head>
+  <meta charset="utf-8">
+  <title>{{vm.title}}</title>
+  <link rel="stylesheet" href="./css/lib/bootstrap.min.css" />
+  <!-- <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"> -->
+  <link rel="stylesheet" href="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css" />
+  <link rel="stylesheet" href="./css/custome.css" />
+  <link href="../node_modules/angularjs-toaster/toaster.min.css" rel="stylesheet" />
 
-     <!-- font-awesome -->
-     <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
-    </body>
-  </html>
+
+  <script src="js/lib/jquery/jquery.min.js"></script>
+  <script src="../node_modules/angular/angular.js"></script>
+  <script src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="../node_modules/angular-ui-router/release/stateEvents.js"></script>
+  <script src="js/lib/angular/angular-route.min.js"></script>
+  <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap.js"></script>
+  <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
+  <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
+  <script src="../node_modules/angularjs-toaster/toaster.min.js"></script>
+  <script src="./app.config.js"></script>
+  <script src="./app.js"></script>
+
+
+</head>
+
+<body>
+  <div class="container-fluid" style="margin:0;padding:0">
+    <div ui-view="main"></div>
+  </div>
+  <!-- controllers -->
+  <script src="templates/home/home.controller.js"></script>
+  <script src="templates/profile/profile.controller.js"></script>
+  <script src="templates/login/login.controller.js"></script>
+  <script src="templates/register/register.controller.js"></script>
+  <script src="templates/todo/todo.controller.js"></script>
+  <!-- services -->
+  <script src="js/services/data.service.js"></script>
+  <script src="js/services/authentication.service.js"></script>
+  <script src="js/services/todo.service.js"></script>
+
+  <!-- factory -->
+  <script src="js/factories/base64.factory.js"></script>
+
+  <!-- filters -->
+  <script src="js/filters/capitalize.filter.js"></script>
+  <script src="js/filters/todo.filter.js"></script>
+
+  <!-- directives -->
+  <script src="js/directives/fileinput.directive.js"></script>
+  <script src="js/directives/listtodos.directive.js"></script>
+  <script src="js/directives/deletepermission.directive.js"></script>
+  <script src="js/directives/caret.directive.js"></script>
+
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
+</body>
+
+</html>
