--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-csp.css" />
   <link rel="stylesheet" href="./css/custome.css" />
   <link href="../node_modules/angularjs-toaster/toaster.min.css" rel="stylesheet" />
-
+  <link href="../node_modules/angularjs-datepicker/src/css/angular-datepicker.css" rel="stylesheet" type="text/css" />
 
   <script src="js/lib/jquery/jquery.min.js"></script>
   <script src="../node_modules/angular/angular.js"></script>
@@ -19,6 +19,7 @@
   <script src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
   <script src="../node_modules/angular-animate/angular-animate.min.js"></script>
   <script src="../node_modules/angularjs-toaster/toaster.min.js"></script>
+  <script src="../node_modules/angularjs-datepicker/src/js/angular-datepicker.js"></script>
   <script src="./app.config.js"></script>
   <script src="./app.js"></script>
 
@@ -52,6 +53,7 @@
   <script src="js/directives/listtodos.directive.js"></script>
   <script src="js/directives/deletepermission.directive.js"></script>
   <script src="js/directives/caret.directive.js"></script>
+  <script src="js/directives/fileupload.directive.js"></script>
 
   <!-- font-awesome -->
   <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
