todo app modification

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,8 @@
   <script src="js/directives/deletepermission.directive.js"></script>
   <script src="js/directives/caret.directive.js"></script>
   <script src="js/directives/fileupload.directive.js"></script>
+  <script src="js/directives/noinput.directive.js"></script>
+  <script src="js/directives/formatedate.directive.js"></script>
 
   <!-- font-awesome -->
   <link rel="stylesheet" href="./assets/font-awesome/css/font-awesome.min.css">
