modularize code and change routes

--- a/app/modules/common/app.html
+++ b/app/modules/common/app.html
@@ -1,5 +1,5 @@
 <div>
-    <header ng-include="'templates/common/navbar.html'"></header>
+    <header ng-include="'modules/common/navbar.html'"></header>
     <div class="container-fluid">
         <div>
             <toaster-container></toaster-container>
