--- a/app/index.html
+++ b/app/index.html
@@ -31,11 +31,11 @@
     <div ui-view="main"></div>
   </div>
   <!-- controllers -->
-  <script src="templates/home/home.controller.js"></script>
-  <script src="templates/profile/profile.controller.js"></script>
-  <script src="templates/login/login.controller.js"></script>
-  <script src="templates/register/register.controller.js"></script>
-  <script src="templates/todo/todo.controller.js"></script>
+  <script src="modules/home/home.controller.js"></script>
+  <script src="modules/profile/profile.controller.js"></script>
+  <script src="modules/login/login.controller.js"></script>
+  <script src="modules/register/register.controller.js"></script>
+  <script src="modules/todo/todo.controller.js"></script>
   <!-- services -->
   <script src="js/services/data.service.js"></script>
   <script src="js/services/authentication.service.js"></script>
