--- a/gulp/index.html
+++ b/gulp/index.html
@@ -20,7 +20,7 @@
   <script src="../node_modules/angularjs-toaster/toaster.min.js"></script>
   <script src="../node_modules/angularjs-datepicker/src/js/angular-datepicker.js"></script>
   <!--<script src="./app.config.js"></script>
-  <script src="./app.ae4ad52c.js"></script>-->
+  <script src="./app.js"></script>-->
 
 
 </head>
